--- a/image_recognition_model.ipynb
+++ b/image_recognition_model.ipynb
@@ -3,7 +3,9 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "authorship_tag": "ABX9TyNoGkWdLTACboLRzAlveCqB",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -15,8 +17,18 @@
   },
   "cells": [
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/manmeetsingh7781/csci167project/blob/main/image_recognition_model.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "FrS00tPpd-YK"
       },
@@ -49,16 +61,29 @@
         "])"
       ],
       "metadata": {
-        "id": "g_wQhAfneFnD"
+        "id": "g_wQhAfneFnD",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "bd660de9-378e-425a-d56f-601504bf4ff9"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "Downloading: \"https://download.pytorch.org/models/resnet50-0676ba61.pth\" to /root/.cache/torch/hub/checkpoints/resnet50-0676ba61.pth\n",
+            "100%|██████████| 97.8M/97.8M [00:01<00:00, 94.0MB/s]\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "source": [
         "# Load an image from a local file\n",
-        "image_path = \"image3.jpg\"  # Replace with your local image path\n",
+        "image_path = \"/content/images/image2.png\"  # Replace with your local image path\n",
         "if not os.path.exists(image_path):\n",
         "    raise FileNotFoundError(f\"Image file not found: {image_path}\")\n",
         "\n",
@@ -76,7 +101,7 @@
         "print(f\"Predicted class index: {predicted_class.item()}\")\n",
         "\n",
         "# Load ImageNet class names\n",
-        "labels_path = \"imagenet-simple-labels.json\"  # Ensure this file is downloaded and in the same directory\n",
+        "labels_path = \"/content/imagenet-simple-labels.json\"  # Ensure this file is downloaded and in the same directory\n",
         "if not os.path.exists(labels_path):\n",
         "    raise FileNotFoundError(f\"Labels file not found: {labels_path}\")\n",
         "\n",
@@ -87,10 +112,23 @@
         "print(f\"Predicted label: {class_labels[predicted_class.item()]}\")"
       ],
       "metadata": {
-        "id": "7gJbF0pveK19"
+        "id": "7gJbF0pveK19",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "ac0d7357-949e-4485-f65f-fd605752eb68"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Predicted class index: 340\n",
+            "Predicted label: zebra\n"
+          ]
+        }
+      ]
     }
   ]
 }
